--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="./usuario.jpg"/>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Curriculum</title>
+    <meta name="author" content="Ritthy Thomas">
+    <meta name="description" content="¿Necesitas un desarrollador WEB experimentado? En este 2023 hace realidad tus sueños conmigo>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
