--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Curriculum</title>
     <meta name="author" content="Ritthy Thomas">
     <meta name="title" content="Ritthy Thomas - Desarrolo WEB">
-    <meta name="description" content="¿Necesitas un desarrollador WEB experimentado? En este 2023 hace realidad tus sueños conmigo>
+    <meta name="description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
