--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Curriculum</title>
     <meta name="author" content="Ritthy Thomas">
-    <meta name="title" content="Ritthy Thomas - Desarrolo WEB">
-    <meta name="description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ritthy Thomas - Desarrolo WEB">
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/11/08/23/52/man-3803551_960_720.jpg"
+    <meta property="og:description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
