--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Curriculum</title>
     <meta name="author" content="Ritthy Thomas">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Ritthy Thomas - Desarrolo WEB">
-    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/11/08/23/52/man-3803551_960_720.jpg"
+    <meta property="og:title" content="Ritthy Thomas - Desarrollo WEB">
+    <meta property="og:image" content="https://www.lavanguardia.com/peliculas-series/images/profile/1986/2/w300/cQgIGqsR87UIbovQta6BfiJsneF.jpg"
     <meta property="og:description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
