--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Curriculum</title>
     <meta name="author" content="Ritthy Thomas">
+    <meta property="og:site_name" content="GitHub">
     <meta name="keywords" content="cv,desarrollo web,joaquin cordero,desarrolo frontend,programador,programadores,curriculum vitae,github,programacion,programador,ritthy thomas">
     <meta property="og:url" content="https://joaquincordero1.github.io/Curriculum-vitae/">
     <meta property="og:type" content="website">
