--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="og:title" content="Ritthy Thomas - Desarrollo WEB">
     <meta property="og:image:url" content="https://www.lavanguardia.com/peliculas-series/images/profile/1986/2/w300/cQgIGqsR87UIbovQta6BfiJsneF.jpg">
     <meta property="og:description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
+    <meta name="copyright" content="Ritthy Thomas">
+    <meta name="robots" content="index">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
