--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    
     <div class="header content" id="inicio">
       <div class="header-video">
-          <video class="col-sm-4" src="img/Laptop.mp4" loop muted autoplay></video>
+          <video class="col-sm-4" src="img/Laptop.mp4" alt="Laptop" loop muted autoplay></video>
       </div>
 
       <div class="header-overlay"></div>
@@ -44,7 +44,7 @@
  
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="navegador.b">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://randomuser.me/"><img class="logo" src="img/cv.png"></a>
+          <a class="navbar-brand" href="https://randomuser.me/"><img class="logo" src="img/cv.png" alt="logo de la pagina"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -92,10 +92,10 @@
               <strong>HABILIDADES</strong>
           </div>
               <section class="row w-100 justify-content-center mt-5  g-3">
-                  <div class="col-12 col-md-3 ta-1"><img height="150" width="150" src="img/css-3.svg"></div>
-                  <div class="col-12 col-md-3 ta-2"><img height="150" width="150" src="img/html-1.svg"></div>
-                  <div class="col-12 col-md-3 ta-3"><img height="150" width="150" src="img/javascript-1.svg"></div>
-                  <div class="col-12 col-md-3 ta-4"><img height="150" width="190" src="img/bootstrap-5-1.svg"></div>
+                  <div class="col-12 col-md-3 ta-1"><img height="150" width="150" src="img/css-3.svg" alt="css"></div>
+                  <div class="col-12 col-md-3 ta-2"><img height="150" width="150" src="img/html-1.svg" alt="html"></div>
+                  <div class="col-12 col-md-3 ta-3"><img height="150" width="150" src="img/javascript-1.svg" alt="JavScript"></div>
+                  <div class="col-12 col-md-3 ta-4"><img height="150" width="190" src="img/bootstrap-5-1.svg" alt="boostrap"></div>
               </section>
           </div>
       </div>
@@ -109,7 +109,7 @@
            <div class="capa">
              <h3>Banco Santander</h3>
              <span>Responsable de crear un comparador de tarjetas de crédito que elevó las ventas de producto en un 15%.</span>
-             <a class="btn" href="#">Repositorio</a>
+             <a class="btn" href="#inicio">Repositorio</a>
            </div>
            </figure>
           </div>
