--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon" href="img/usuario.jpg"/>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
     <title>Curriculum</title>
     <meta name="author" content="Ritthy Thomas">
     <meta property="og:site_name" content="Curriculum Vitae">
@@ -16,6 +17,12 @@
     <meta property="og:description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
     <meta name="copyright" content="Ritthy Thomas">
     <meta name="robots" content="index">
+    <!--twitter-->
+    <meta property="twitter:url" content="https://joaquincordero1.github.io/Curriculum-vitae/">
+    <meta property="twitter:title" content="Ritthy Thomas - Desarrollo WEB">
+    <meta property="twitter:image:url" content="https://www.lavanguardia.com/peliculas-series/images/profile/1986/2/w300/cQgIGqsR87UIbovQta6BfiJsneF.jpg">
+    <meta property="twitter:description" content="¿Necesitas un desarrollador WEB experimentado? 🖥 En este 2023 hace realidad tus sueños conmigo ⭐">
+    <meta property="twitter:card" content="Portfolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
